Vollständige oAuth 2.0 Authentication Server Implementierung mit Laravel/Passport
