# resources/views/layouts/app.blade.php
@@ -14,7 +14,7 @@
 
     <!-- Fonts -->
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,600" rel="stylesheet">
 
     <!-- Styles -->
     <link href="{{ asset('css/app.css') }}" rel="stylesheet">
@@ -22,10 +22,10 @@
 <body>
     <div id="app">
         <nav class="navbar navbar-expand-md navbar-light bg-white shadow-sm">
-            <div class="container">
-                <a class="navbar-brand" href="{{ url('/') }}">
+            <div class="container" style="max-width: 100%;">
+                <!--a class="navbar-brand" href="{{ url('/') }}">
                     {{ config('app.name', 'ShoppingList Backend') }}
-                </a>
+                </a-->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="{{ __('Toggle navigation') }}">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -33,7 +33,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <!-- Left Side Of Navbar -->
                     <ul class="navbar-nav mr-auto">
-
+                      <li class="nav-item"><a class="nav-link" href="/api/docs">API</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/downloads/ShoppingFlutter.apk">Flutter Build</a></li>
+                      <li class="nav-item"><a class="nav-link" href="/downloads/ShoppingIonic.apk">Ionic Build</a></li>
+                      <li class="nav-item"><a class="nav-link" href="http://github.com/mikesdevcorner">GitHub</a></li>
+                      <li class="nav-item"><a class="nav-link" href="mailto:office@mikesdevcorner.com">Mail</a></li>
                     </ul>
 
                     <!-- Right Side Of Navbar -->
@@ -51,7 +55,7 @@
                         @else
                             <li class="nav-item dropdown">
                                 <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
-                                    {{ Auth::user()->username }} <span class="caret"></span>
+                                    {{ Auth::user()->name }} <span class="caret"></span>
                                 </a>
 
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
